# tree_classification

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/ensemble_model/: run_20251029_214946.json
data/predictions/: val_predictions_unique.csv
doc/org/: Leistungsbeschreibung.md  WS2025_Stundendokumentation.xlsx
notebooks/: README.md  detect_disturbed_trees.ipynb  exploratory_data_analysis.ipynb  oversampling_analysis.ipynb  validation_data_analysis.ipynb
notebooks/alkex/: data_reduction.ipynb  eda.ipynb  moving_avg.ipynb  oversampling_analysis copy.ipynb  oversampling_analysis.ipynb
notebooks/evelin/: analysis_spectral_bands.ipynb  correct_labels.ipynb  detect_disturbed_trees.ipynb  detect_mislabeled_trees.ipynb  detect_notuseful_ids.ipynb  eda_evelyn.ipynb  shap_analysis.ipynb  specify_distrubed_label.ipynb  specify_disturbed_label.ipynb
notebooks/rafaelo/: data_understanding_basic.ipynb  exploratory_data_analysis.ipynb  lstm.ipynb
notebooks/utils/: analysis_disturbed.py  basic_analysis.py  calculate_indices.py  constants.py  correlation_analysis.py  data_loader.py  dimensionality_reduction.py  preprocessing.py  sits_outlier_cleaner.py  stationarity_analyzer.py  time_series_aggregate.py  visualization_anomaly_detection.py  visualization_function.py  visualization_histogram.py  visualization_spectral.py  visualization_time_series.py
src/: README.md  run_training_pipeline.py
src/general_utils/: constants.py  find_best_interval.py  utility_functions.py
src/initial_pipeline/: run_initial_pipeline.py
src/model_analysis/: README.md
(+368 files in other folders)
