[project]
name = "tree_classification_awp2"
version = "2025.0.0"
requires-python = ">=3.10"
dependencies = [
  "black==25.1.0",
  "numpy>=1.23.5,<2.0.0",
  "openpyxl==3.1.5",
  "pandas==2.2.3",
  "plotly==6.0.1",
  "ruff==0.11.4",
  "xlsxwriter==3.2.5",
  "nbformat>=4.2.0",
  "matplotlib",
  "ipykernel",
  "seaborn",
  "statsmodels",
  "scikit-learn",
  "xgboost", 
  "tsaug",
  "torch==2.2.2",
  "tensorboard==2.16.2",
  "tensorflow==2.16.2"
]


[tool.ruff.lint]
select = ["E", "F", "Q"]

[tool.ruff.format]
quote-style = "double"
