[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_classification_awp2"
version = "2025.0.0"
requires-python = ">=3.10"
dependencies = [
    "black",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "ruff",
    "xlsxwriter",
    "nbformat",
    "matplotlib",
    "ipykernel",
    "seaborn",
    "statsmodels",
    "scikit-learn",
    "xgboost",
    "tsaug",
    "torch",
    "tensorboard",
    "tensorflow",
    "tqdm",
    "tabulate",
    "pytorch_lightning",
    "lightgbm",
    "tqdm_joblib",
    "shap"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "Q"]

[tool.ruff.format]
quote-style = "double"
